--- a/config/database.yml
+++ b/config/database.yml
@@ -52,5 +52,5 @@ production:
   database: chat-space_production
   username: chat-space
   password: <%= ENV['CHAT-SPACE_DATABASE_PASSWORD'] %>
-  socket: /mysql.sock
+  socket: /var/lib/mysql/mysql.sock
 
